erDiagram
    USER ||--o{ BOOKING_REQUEST : "Submits (1,1)-(0,n)"
    USER ||--o{ BOOKING_REQUEST : "Decides (0,1)-(0,n)"
    USER ||--o{ BOOKING_REQUEST : "Checks-in (0,1)-(0,n)"
    USER ||--o{ MAINTENANCE_RECORD : "Reports (1,1)-(0,n)"
    USER ||--o{ MAINTENANCE_RECORD : "Handles (0,1)-(0,n)"
    
    SPACE ||--o{ BOOKING_REQUEST : "Has (1,1)-(0,n)"
    SPACE ||--o{ FACILITY : "Contains (1,1)-(0,n)"
    SPACE ||--o{ MAINTENANCE_RECORD : "Undergoes (1,1)-(0,n)"

    USER {
        string UserID PK
        string FullName
        string Email
        string PhoneNumber
        string Role
        string Department
        string AccountStatus
    }
    SPACE {
        string SpaceCode PK
        string SpaceName
        string SpaceType
        string Building
        string Floor
        string RoomNumber
        int Capacity
        string CurrentStatus
        string UsagePolicy
    }
    FACILITY {
        string FacilityID PK
        string FacilityName
        string FacilityType
        string Condition
    }
    BOOKING_REQUEST {
        string BookingID PK
        datetime ReqStartTime
        datetime ReqEndTime
        string Purpose
        int NumParticipants
        string Status
        datetime DecisionTime
        string DecisionNote
        string RejReason
        datetime ActualStartTime
        datetime ActualEndTime
        string InitialCond
        string FinalCond
        string UsageNotes
    }
    MAINTENANCE_RECORD {
        string MaintenanceID PK
        string ProblemDesc
        datetime StartTime
        datetime CompletionTime
        string Status
        string ResultNote
    }
